Java 8 backport. WIP